check_output_7.txt
    Checking yamux v0.12.1
    Checking app v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/app)
    Checking sb-transport v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/crates/sb-transport)
error[E0412]: cannot find type `Control` in crate `yamux`
   --> crates/sb-transport/src/multiplex.rs:202:21
    |
202 |     control: yamux::Control,
    |                     ^^^^^^^ not found in `yamux`

error[E0412]: cannot find type `Control` in crate `yamux`
   --> crates/sb-transport/src/multiplex.rs:210:28
    |
210 |     fn new(control: yamux::Control, closed: Arc<std::sync::atomic::AtomicBool>) -> Self {
    |                            ^^^^^^^ not found in `yamux`

warning: unused import: `Method`
  --> crates/sb-transport/src/http2.rs:74:12
   |
74 | use http::{Method, Request, Uri};
   |            ^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `BytesMut`
  --> crates/sb-transport/src/grpc.rs:43:25
   |
43 | use bytes::{Buf, Bytes, BytesMut};
   |                         ^^^^^^^^

warning: unused import: `futures::stream::Stream`
  --> crates/sb-transport/src/grpc.rs:44:5
   |
44 | use futures::stream::Stream;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `TunnelRequest` and `TunnelResponse`
   --> crates/sb-transport/src/grpc.rs:204:22
    |
204 |         use tunnel::{TunnelRequest, TunnelResponse};
    |                      ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `futures::Stream`
  --> crates/sb-transport/src/multiplex.rs:84:5
   |
84 | use futures::Stream;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
  --> crates/sb-transport/src/circuit_breaker.rs:27:5
   |
27 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

error[E0599]: no method named `control` found for struct `yamux::Connection` in the current scope
   --> crates/sb-transport/src/multiplex.rs:407:34
    |
407 |         let control = connection.control();
    |                                  ^^^^^^^ method not found in `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`

error[E0599]: the method `next` exists for struct `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`, but its trait bounds were not satisfied
   --> crates/sb-transport/src/multiplex.rs:414:44
    |
414 |             while let Some(_) = connection.next().await {
    |                                            ^^^^ method cannot be called on `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>` due to unsatisfied trait bounds
    |
   ::: /Users/bob/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/yamux-0.12.1/src/connection.rs:79:1
    |
 79 | pub struct Connection<T> {
    | ------------------------ doesn't satisfy `_: StreamExt` or `_: Stream`
    |
    = note: the following trait bounds were not satisfied:
            `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>: futures::Stream`
            which is required by `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>: futures::StreamExt`

warning: unused import: `SinkExt`
  --> crates/sb-transport/src/grpc.rs:45:15
   |
45 | use futures::{SinkExt, StreamExt};
   |               ^^^^^^^

warning: unused variable: `cx`
   --> crates/sb-transport/src/http2.rs:381:48
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                                                ^^ help: if this is intentional, prefix it with an underscore: `_cx`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
   --> crates/sb-transport/src/http2.rs:381:22
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                      ----^^^^
    |                      |
    |                      help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `error`
   --> crates/sb-transport/src/retry.rs:265:35
    |
265 |     pub fn is_transient_dns_error(error: &DialError) -> bool {
    |                                   ^^^^^ help: if this is intentional, prefix it with an underscore: `_error`

warning: unused variable: `is_timeout`
   --> crates/sb-transport/src/circuit_breaker.rs:399:36
    |
399 |     fn should_count_failure(&self, is_timeout: bool) -> bool {
    |                                    ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_timeout`

Some errors have detailed explanations: E0412, E0599.
For more information about an error, try `rustc --explain E0412`.
warning: `sb-transport` (lib) generated 11 warnings
error: could not compile `sb-transport` (lib) due to 4 previous errors; 11 warnings emitted
